      calls were added to zenwinx library
    - winx_fbopen, winx_fbwrite, winx_fbclose calls added to zenwinx
      library for buffered file i/o support
    - obsolete winx_get_volume_size and winx_get_filesystem_name calls
      were removed from zenwinx library; use more common
      winx_get_volume_information instead
    - one little bug in winx_kbhit, winx_breakhit functions was fixed
    RC1:
    - partial defragmentation was added to decrease number of fragments
      even when there is no free space on disk to hold all fragments of the file together
    - volume optimization algorithm was improved to prevent useless
      additional optimization passes
    - one little bug preventing optimization from being stopped was fixed
      in driver
    - volume optimization algorithm was improved to prevent skipping
      heavily fragmented parts of the processed volume
    - progress is now added to the GUI window caption,
      so it is displayed in the tool-tip of the task-bar icon
    - cryptic single character progress label was replaced
      by the localized operation names
    - file system type detection was rewritten to be more reliable
      and detect UDF-formatted volumes properly
    - fixed a problem where the case of the names of the help pages
      launched from the configuration dialog did not match
    - fixed a problem, where .lua files would get executed instead of edited,
      if "Lua for Windows" was installed
    - 10 seconds delay is skipped on boot time scan, if only one keyboard is present
    - added language selector to the GUI package
    - Hindi translation was added
    - the following translations were updated:

      Croatian, Danish, Dutch, French, Greek, Polish, Russian, Serbian,
      Swedish, Turkish


  Version 4.3.0  2010-05-29
  ------------------------------------------------------------------------------
    RC4:
    - GUI window resizing feature was added
    - scaling according to the screens DPI settings added