@@ -12,7 +12,8 @@ EXPORTS
 	udefrag_get_map
 	udefrag_get_default_formatted_results
 	udefrag_release_default_formatted_results
-	udefrag_get_avail_volumes
+	udefrag_get_vollist
+	udefrag_release_vollist
 	udefrag_validate_volume
 	udefrag_fbsize=winx_fbsize
 	udefrag_dfbsize=winx_dfbsize
